# Celebal_Internship_Assignment

./: Week4_PeeyushVerma.ipynb  week1_PeeyushVerma.ipynb  week5_PeeyushVerma.ipynb  week6_PeeyushVerma.ipynb  week8_PeeyushVerma.ipynb  week_2PeeyushVerma.ipynb
week7_PeeyushVerma/: .env.example  .gitignore  README.md  Week7_Project.docx  app.py  config.py  pyproject.toml  requirements.txt
week7_PeeyushVerma/embeddings/: embedding_model.py
week7_PeeyushVerma/evaluation/: validation.py
week7_PeeyushVerma/ingestion/: chunker.py  loader.py
week7_PeeyushVerma/llm/: generator.py
week7_PeeyushVerma/retrieval/: hybrid_search.py  reranker.py  retriever.py
week7_PeeyushVerma/utils/: helpers.py  logger.py  metrics.py
