[project]
name = "rag-document-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "pdf2image>=1.17.0",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "torchvision>=0.27.1",
]
